--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "socket.io-client": "^4.1.1",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "concurrently": "^6.0.2",
