--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.4",
+    "multer": "^1.4.2",
     "request": "^2.88.2",
     "socket.io-client": "^4.1.1",
     "timeago.js": "^4.0.2"
